<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The %s \'s repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id" translatable="false">file_channel</string>
    <string name="notification_channel_name" translatable="true">File Download</string>
    <string name="notification_channel_description">File Download notification</string>
    <string name="notification_action_text">Check the status</string>

    <string name="request_notifications_permission_dialog_title">Enable Notifications</string>
    <string name="request_notifications_permission_dialog_message_body">Notifications are turned off. Please enable them to stay updated.</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>

    <string name="glide_description">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_description">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_description">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="button_download">Download</string>

    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="download_image">Image: Cloud download image</string>
</resources>
