<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <RadioGroup
        android:id="@+id/download_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/download_glide_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_description"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/download_loadapp_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/loadapp_description"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/download_retrofit_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/retrofit_description"
            android:textSize="20sp" />
    </RadioGroup>


    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/default_margin"
        app:backgroundColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:loadingText="@string/button_loading"
        app:progressBarColor="@color/colorPrimaryDark"
        app:progressCircularColor="@color/colorAccent"
        app:text="@string/button_download"
        app:textColor="@android:color/white"
        app:textSize="@dimen/default_text_size" />

</androidx.constraintlayout.widget.ConstraintLayout>